Updated Gems in Preparation for Refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-.bundle
-db/*.sqlite3
-log/*.log
-tmp/
-config/database.yml
-config/initializers/pry.rb
+/config/database.yml
+*.rbc
+*.sassc
+.sass-cache
+capybara-*.html
+.rspec
+/.bundle
+/vendor/bundle
+/log/*
+/tmp/*
+/db/*.sqlite3
+/public/system/*
+/coverage/
+/spec/tmp/*
+**.orig
 rerun.txt
+pickle-email-*.html
