--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -4,17 +4,17 @@ development:
   reconnect: false
   database: u_development
   pool: 5
-  username: ci
+  username: root
   password:
   socket: /tmp/mysql.sock
 
-test:
+test: &test
   adapter: mysql2
   encoding: utf8
   reconnect: false
   database: u_test
   pool: 5
-  username: ci
+  username: root
   password:
   socket: /tmp/mysql.sock
 
@@ -24,7 +24,7 @@ production:
   reconnect: false
   database: u_production
   pool: 5
-  username: ci
+  username: root
   password:
   socket: /tmp/mysql.sock
 
